# recipes

cmake/: CMakeNote.md
cpp/cpa_demo/: .cproject  .gitignore  .project  CMakeLists.txt  README.md
cpp/cpa_demo/include/infra/base/: BlockingQueue.h  Condition.h  CountDownLatch.h  Mutex.h  Noncopyable.h  OSS.h  Thread.h
cpp/cpa_demo/include/pb/: movie.proto
cpp/cpa_demo/source/: entry1.cpp  entry2.cpp  main.cpp
cpp/cpa_demo/source/infra/base/: OSS.cpp  Thread.cpp
cpp/infra/: Makefile  Thread.h  ThreadPool.cpp  TimerWheel.cpp  TimerWheel.h  main.cpp
cpp/move_aware_class/: main.cpp
cpp/protobuf/: Protobuf.md
cpp/protobuf/10-simple/: 10-simple.sln  10-simple.vcxproj  addressBook  main.cpp  simple
cpp/protobuf/20-oneof/: 20-oneof.sln  20-oneof.vcxproj  20-oneof.vcxproj.filters  Makefile  main.cpp  movie.pb.cc  movie.pb.h  movie.proto
cpp/protobuf/20-oneof/Debug/: 20-oneof.ilk  vc120.idb
cpp/protobuf/20-oneof/Debug/20-oneof.tlog/: 20-oneof.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/protobuf/30-any/: 30-any.vcxproj  com.pb.cc  com.pb.h  com.proto  main.cpp  msg.pb.cc  msg.pb.h  msg.proto
cpp/protobuf/40-createObjByMsgType/: 40-createObj.vcxproj  Makefile  addressBook  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  main.cpp
cpp/protobuf_best_practice/: .cproject  .project  CMakeLists.txt  README.md  build.sh  config.cmake  config.sh  install.sh
cpp/protobuf_best_practice/doc/: OSP入门介绍.7z
cpp/protobuf_best_practice/include/base/: BaseTypes.h  InterfaceDef.h  Keywords.h  stdc.h
cpp/protobuf_best_practice/include/pb/: movie.pb.h
cpp/protobuf_best_practice/src/pb/: movie.pb.cc
cpp/protobuf_best_practice/test/: MovieInfoRequestTest.cpp  MovieInfoResponseTest.cpp  main.cpp
cpp/tool/: Thread.cpp  ThreadPool.h
go/: Go学习笔记.md
go/Energy/: Energy.md
go/Energy/code/: go.mod  main.go
go/Energy/code/energy/: energy.go  humanEnergy.go  robotEnergy.go
go/Energy/code/object/: human.go  robot.go
go/Energy/code/worker/: worker.go
go/fizzbuzz/: FizzBuzzWhizz.md
go/fizzbuzz/code/fp/: go.mod  main.go
go/fizzbuzz/code/oo/: go.mod  main.go
go/fizzbuzz/code/oo/action/: action.go  nop.go  to.go
go/fizzbuzz/code/oo/matcher/: always.go  contains.go  matcher.go  times.go
go/fizzbuzz/code/oo/rule/: allof.go  anyof.go  atom.go  rule.go
go/fizzbuzzwhizz/: fizzbuzzwhizz.go  fizzbuzzwhizz_test.go  go.mod  go_test_demo.md  main.go
